--- a/package.json
+++ b/package.json
@@ -2,10 +2,19 @@
   "name": "jstracking",
   "version": "1.0.0",
   "description": "Javascript Body Tracking experimentation",
-  "main": "index.tsx",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.9.0",
+    "babel-plugin-transform-async-to-generator": "^6.24.1",
+    "babel-plugin-transform-runtime": "^6.23.0"
+  },
+  "dependencies": {
+    "@babel/runtime": "^7.9.2",
+    "babel-polyfill": "^6.26.0"
+  }
 }
